created column and added input for city search

--- a/index.html
+++ b/index.html
@@ -14,6 +14,22 @@
     <header class="hero is-link">
       <h1 class="title has-text-centered">Weather Dashboard</h1>
     </header>
-    <main></main>
+    <main>
+      <section class="columns">
+        <div class="column is-one-quarter">
+          <div class="box">
+            <div class="field" id="searchForm">
+              <label class="label has-text-centered is-medium"
+                >Search for a City
+
+                <input
+                  class="input"
+                  type="text"
+                  id="cityInput"
+                  placeholder="Enter City Name"
+                  required
+                />
+              </label>
+    </main>
   </body>
 </html>
