created submit button

--- a/index.html
+++ b/index.html
@@ -30,6 +30,17 @@
                   required
                 />
               </label>
+              <div class="buttons is-centered">
+                <button
+                  class="button is-primary mt-3 is-fullwidth"
+                  type="submit"
+                  id="cityButton"
+                >
+                  Submit
+                </button>
+              </div>
+              </div>
+            </div>
     </main>
   </body>
 </html>
