added boxes for searchHistory, currentWeather, and futureWeather

--- a/index.html
+++ b/index.html
@@ -41,6 +41,22 @@
               </div>
               </div>
             </div>
+            <div class="box">
+              <div class="subtitle is-4" id="searchHistoryContainer"></div>
+            </div>
+          </div>
+        </div>
+        <div class="column">
+          <div class="box">
+            <label class="label is-medium">Today's Forecast:</label>
+            <div id="currentWeather"></div>
+          </div>
+          <div class="box">
+            <label class="label is-medium">5-Day Forecast:</label>
+            <div class="columns is-multiline" id="futureWeather"></div>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
